New Crowdin updates (#417)

--- a/src/i18n/locales/fr-FR.json
+++ b/src/i18n/locales/fr-FR.json
@@ -3,6 +3,8 @@
 		"home": "{FilesName} • Accueil",
 		"docs_home": "{FilesName} • Documentation",
 		"docs_page": "{FilesName} • Documentation - {title}",
+		"blog_home": "{FilesName} • Blog",
+		"blog_page": "{FilesName} • {title}",
 		"description": "Construire le meilleur gestionnaire de fichiers pour Windows."
 	},
 	"home": {
@@ -66,7 +68,14 @@
 	},
 	"blog": {
 		"coming_soon": "De nouveaux posts bientôt !",
-		"read_more": "En Savoir Plus"
+		"read_more": "En Savoir Plus",
+		"share": {
+			"default": "Native sharing",
+			"url": "Copy URL",
+			"tweet": "Twitter",
+			"facebook": "Facebook",
+			"rss": "RSS Feed"
+		}
 	},
 	"docs": {
 		"autocomplete_empty": "Aucun résultat",
@@ -99,7 +108,7 @@
 	},
 	"download": {
 		"title": "Télécharger {FilesName}",
-		"donation_description": "{FilesName} is a community-driven project that depends on your support to grow and improve. Please consider purchasing {FilesName} through the Microsoft Store or supporting us on GitHub if you use the classic installer.",
+		"donation_description": "{FilesName} est un projet conduit par sa communauté, qui dépend de votre soutien pour se développer et s'améliorer. Nous vous invitons à considérer l'achat de {FilesName} via le Microsoft Store ou de nous soutenir sur GitHub si vous utilisez l'installateur classique.",
 		"donation_button": "Faire un don",
 		"microsoft_store": {
 			"description": "Acheter {FilesName} via le Microsoft Store soutient les développeurs et nous permet de continuer à mettre à jour l'application avec de nouvelles fonctionnalités et améliorations."
