--- a/src/i18n/locales/ja-JP.json
+++ b/src/i18n/locales/ja-JP.json
@@ -3,6 +3,8 @@
 		"home": "{FilesName} • ホーム",
 		"docs_home": "{FilesName} • ドキュメント",
 		"docs_page": "{FilesName} • ドキュメント - {title}",
+		"blog_home": "{FilesName} • ブログ",
+		"blog_page": "{FilesName} • {title}",
 		"description": "Windowsの最高のファイルマネージャを作る。"
 	},
 	"home": {
@@ -66,7 +68,14 @@
 	},
 	"blog": {
 		"coming_soon": "その他の投稿は近日公開予定です！",
-		"read_more": "もっと読む"
+		"read_more": "もっと読む",
+		"share": {
+			"default": "システムネイティブの共有",
+			"url": "URLをコピー",
+			"tweet": "Twitter",
+			"facebook": "Facebook",
+			"rss": "RSS Feed"
+		}
 	},
 	"docs": {
 		"autocomplete_empty": "結果なし",
@@ -99,7 +108,7 @@
 	},
 	"download": {
 		"title": "{FilesName} をダウンロード",
-		"donation_description": "{FilesName} is a community-driven project that depends on your support to grow and improve. Please consider purchasing {FilesName} through the Microsoft Store or supporting us on GitHub if you use the classic installer.",
+		"donation_description": "{FilesName} はコミュニティ主導のプロジェクトであり、成長し改善するためには皆様のサポートが必要です。Microsoftストアから{FilesName} を購入するか、クラシックインストーラを使用する場合はGitHubでサポートすることをぜひ検討してください。",
 		"donation_button": "寄付",
 		"microsoft_store": {
 			"description": "{FilesName} を Microsoft Store 経由で購入することで、開発者をサポートし、新機能の追加やアプリの修正を継続できるようになります。"
