--- a/src/i18n/locales/pt-PT.json
+++ b/src/i18n/locales/pt-PT.json
@@ -51,6 +51,10 @@
 			"archives": {
 				"title": "View and edit archives",
 				"description": "Manage zipped archives including zip, WinRar, 7zip and more. Drag & drop to add to existing archives, and use the create archive option to create encrypted archives."
+			},
+			"git": {
+				"title": "Git integration (Coming Soon)",
+				"description": "Easily manage your git projects. Create new branches, switch between them, and sync your changes - all without leaving Files."
 			}
 		},
 		"themes": {
