--- a/src/i18n/locales/vi-VN.json
+++ b/src/i18n/locales/vi-VN.json
@@ -53,7 +53,7 @@
 				"description": "Quản lý tệp nén bao gồm zip, WinRAR, 7-Zip và hơn thế nữa. Kéo và thả để thêm vào tệp nén có sẵn, và dùng tùy chọn tạo để tạo tệp nén mã hóa."
 			},
 			"git": {
-				"title": "Git integration (Coming Soon)",
+				"title": "Git integration",
 				"description": "Easily manage your git projects. Create new branches, switch between them, and sync your changes - all without leaving Files."
 			}
 		},
