--- a/src/i18n/locales/ar-SA.json
+++ b/src/i18n/locales/ar-SA.json
@@ -53,7 +53,7 @@
 				"description": "إدارة الأرشيف المضغوط بما في ذلك zip ،WinRar ،7zip وأكثر من ذلك. قم بالسحب والإسقاط للإضافة إلى الأرشيف الموجود، واستخدام خيار إنشاء أرشيف لإنشاء أرشيف مشفر."
 			},
 			"git": {
-				"title": "Git integration (Coming Soon)",
+				"title": "Git integration",
 				"description": "Easily manage your git projects. Create new branches, switch between them, and sync your changes - all without leaving Files."
 			}
 		},
