--- a/src/i18n/locales/he-IL.json
+++ b/src/i18n/locales/he-IL.json
@@ -53,7 +53,7 @@
 				"description": "נהלו קבצי ארכיון מכווצים כולל zip, WinRar, 7zip, ועוד. גררו ושחררו כדי להוסיף לארכיונים קיימים, והשתמשו באפשרות יצירת ארכיון כדי ליצור ארכיונים מוצפנים."
 			},
 			"git": {
-				"title": "Git integration (Coming Soon)",
+				"title": "Git integration",
 				"description": "Easily manage your git projects. Create new branches, switch between them, and sync your changes - all without leaving Files."
 			}
 		},
