--- a/src/i18n/locales/ja-JP.json
+++ b/src/i18n/locales/ja-JP.json
@@ -86,7 +86,7 @@
 		"edit_page": "このページを編集"
 	},
 	"footer": {
-		"copyright": "Copyright © 2021 - {year}, The {FilesName} Authors",
+		"copyright": "Copyright © {year} {FilesName} Community",
 		"home": "ホーム",
 		"docs": "ドキュメント",
 		"news": "ニュース",
