--- a/src/i18n/locales/ko-KR.json
+++ b/src/i18n/locales/ko-KR.json
@@ -86,7 +86,7 @@
 		"edit_page": "이 페이지 편집하기"
 	},
 	"footer": {
-		"copyright": "Copyright © 2021 - {year}, The {FilesName} Authors",
+		"copyright": "Copyright © {year} {FilesName} Community",
 		"home": "홈",
 		"docs": "자습서",
 		"news": "뉴스",
