--- a/src/i18n/locales/da-DK.json
+++ b/src/i18n/locales/da-DK.json
@@ -86,7 +86,7 @@
 		"edit_page": "Edit this page"
 	},
 	"footer": {
-		"copyright": "Copyright © 2021 - {year}, The {FilesName} Authors",
+		"copyright": "Copyright © {year} {FilesName} Community",
 		"home": "Home",
 		"docs": "Docs",
 		"news": "News",
