--- a/src/i18n/locales/hu-HU.json
+++ b/src/i18n/locales/hu-HU.json
@@ -86,7 +86,7 @@
 		"edit_page": "Oldal módosítása"
 	},
 	"footer": {
-		"copyright": "Copyright © 2021 - {year}, The {FilesName} Authors",
+		"copyright": "Copyright © {year} {FilesName} Community",
 		"home": "Kezdőlap",
 		"docs": "Dokumentáció",
 		"news": "Hírek",
