istg this has to work now, it tested everything

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,5 +1,6 @@
 {
 	"metadata": {
+		"name": "{FilesName}",
 		"home": "{FilesName} • Home",
 		"docs_home": "{FilesName} • Docs",
 		"docs_page": "{FilesName} • Docs - {title}",
